--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <title>ars32ml</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
