add og image and tags

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html >
   <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Изобретаю сайты. Интерактивные сайты Заказать сайт сделать дизайн студии web digital" />
+    <meta name="twitter:card" value="summary">
+    <meta property="og:title" content="ARS32" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="ars32.mlogimage.jpg/" />
+    <meta property="og:image" content="/ogimage.jpg" />
+    <meta property="og:description" content="На этой странице живёт скромный парень, который намутит вам сайт" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <title>ars32ml</title>
+    <title>ARS32</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
