--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <canvas id="canvas" width="600" height="600">
       Your browser does not support canvas element.
     </canvas>
+    <h1 cx="122" cy="89" class="item">заголовок</h1>
     <p>offset</p>
     <script src='js/jquery.js'></script>
     <script src="js/func.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/UI.js"></script>
   </body>
 </html>
