--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <canvas id="canvas" width="600" height="600">
       Your browser does not support canvas element.
     </canvas>
-    <h1 cx="122" cy="89" class="item" style="width: 400px">заголовок</h1>
+    <h1 cx="122" cy="89" class="item">заголовок</h1>
     <p cx="122" cy="189" class="item">описание</p>
     <script src='js/jquery.js'></script>
     <script>
