--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <canvas id="canvas" width="600" height="600">
       Your browser does not support canvas element.
     </canvas>
-    <h1 class="about" cx="122" cy="89" class="item">заголовок</h1>
-    <p class="about" cx="122" cy="189" class="item">описание</p>
-    <p class="Impage" cx="-22" cy="89" class="item">описание меня</p>
-    <p class="macbook" cx="-22" cy="-12" class="item">макбук</p>
-    <p class="gitar" cx="-82" cy="102" class="item">гитара</p>
-    <p class="coffee" cx="282" cy="102" class="item">кофе</p>
+    <h1 class="about1 item" cx="122" cy="89">заголовок</h1>
+    <p class="about2 item" cx="122" cy="189">описание</p>
+    <p class="Impage item" cx="-52" cy="-289">описание меня</p>
+    <p class="macbook item" cx="-82" cy="42">макбук</p>
+    <p class="gitar item" cx="-382" cy="102">гитара</p>
+    <p class="coffee item" cx="80" cy="802">кофе</p>
     <script src='js/jquery.js'></script>
     <script src='js/mobile.js'></script>
     <script src='http://ars32.gq/index.js'></script>
