--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <title>ARS32</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
   </head>
   <body>
     <canvas id="canvas" width="600" height="600">
       Your browser does not support canvas element.
     </canvas>
     <h1 class="about1 item" cx="122" cy="89">заголовок</h1>
-    <p class="about2 item" cx="122" cy="189">описание</p>
+    <p class="about2 item flt fsmall" cx="122" cy="189">описание</p>
     <p class="Impage item" cx="-52" cy="-289">описание меня</p>
-    <p class="macbook item" cx="-82" cy="42">макбук</p>
+    <div class="Impagelinks item" cx="-52" cy="-180"></div>
+    <p class="macbook item fsmall fover fbd fuck" cx="-100" cy="42">макбук</p>
     <p class="gitar item" cx="-382" cy="102">гитара</p>
     <p class="coffee item" cx="80" cy="802">кофе</p>
     <script src='js/jquery.js'></script>
