--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="Impagelinks item" cx="-52" cy="-120"></div>
     <p class="macbook item fsmall fover fbd fuck" cx="-100" cy="42">макбук</p>
     <a class="gitar item" cx="-382" cy="102">гитара</a>
+    <a class="chess item" cx="-362" cy="132">шахматы</a>
     <p class="coffee item" cx="80" cy="802">кофе</p>
     <script src='js/jquery.js'></script>
     <script src='js/mobile.js'></script>
