--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     <canvas id="canvas" width="600" height="600">
       Your browser does not support canvas element.
     </canvas>
+    <form class="item" cx="-50" cy="-120" action="https://docs.google.com/forms/d/1TJ33EJsLK8B_paork0CHYPbCDEu9qR1_JWaUbsq5Isg/formResponse?submit=Submit" target="dummyframe" method="POST">
+      <input name="entry.1466569310" jsname="L9xHkb" placeholder="имя">
+      <input name="entry.1763318685" jsname="L9xHkb" placeholder="компания">
+      <input name="entry.580571137" jsname="L9xHkb" placeholder="email или телефон">
+      <!-- <input name="fvv" value="1"> -->
+      <input type="submit" name="submit" id='changeform' value="☞">
+    </form>
     <h1 class="about1 item" cx="122" cy="89">заголовок</h1>
     <p class="about2 item flt fsmall" cx="122" cy="189">описание</p>
     <p class="Impage item" cx="-52" cy="-289">описание меня</p>
@@ -33,5 +40,6 @@
     <script src="js/index.js"></script>
     <script src="js/UI.js"></script>
     <script src="js/atext.js"></script>
+    <script src="js/form.js"></script>
   </body>
 </html>
