--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <link rel="stylesheet" href="css/fonts.css">
   </head>
   <body>
+    <iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe" style="display:none"></iframe>
     <canvas id="canvas" width="600" height="600">
       Your browser does not support canvas element.
     </canvas>
-    <form class="item" cx="-50" cy="-120" action="https://docs.google.com/forms/d/1TJ33EJsLK8B_paork0CHYPbCDEu9qR1_JWaUbsq5Isg/formResponse?submit=Submit" target="dummyframe" method="POST">
+    <form class="item" cx="-50" cy="300" action="https://docs.google.com/forms/d/1TJ33EJsLK8B_paork0CHYPbCDEu9qR1_JWaUbsq5Isg/formResponse?submit=Submit" target="dummyframe" method="POST">
       <input name="entry.1466569310" jsname="L9xHkb" placeholder="имя">
       <input name="entry.1763318685" jsname="L9xHkb" placeholder="компания">
       <input name="entry.580571137" jsname="L9xHkb" placeholder="email или телефон">
