--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       Your browser does not support canvas element.
     </canvas>
     <form class="item" cx="-50" cy="300" action="https://docs.google.com/forms/d/1TJ33EJsLK8B_paork0CHYPbCDEu9qR1_JWaUbsq5Isg/formResponse?submit=Submit" target="dummyframe" method="POST">
-      <input name="entry.1466569310" jsname="L9xHkb" placeholder="имя">
-      <input name="entry.1763318685" jsname="L9xHkb" placeholder="компания">
-      <input name="entry.580571137" jsname="L9xHkb" placeholder="email или телефон">
+      <p>Готов работать с вами на контрактной основе</p>
+      <input name="entry.1466569310" jsname="L9xHkb" placeholder="имя"><br>
+      <input name="entry.1763318685" jsname="L9xHkb" placeholder="компания"><br>
+      <input name="entry.580571137" jsname="L9xHkb" placeholder="email или телефон"><br>
       <!-- <input name="fvv" value="1"> -->
       <input type="submit" name="submit" id='changeform' value="☞">
     </form>
