--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p class="about2 item flt fsmall" cx="122" cy="189">описание</p>
     <p class="Impage item" cx="-52" cy="-289">описание меня</p>
     <div class="Impagelinks item" cx="-52" cy="-120"></div>
-    <p class="macbook item fsmall fover fbd fuck" cx="-100" cy="42">макбук</p>
+    <div class="macbook item fsmall fover fbd fuck" style="width: auto" cx="-100" cy="42"></div>
     <a class="gitar item" cx="-382" cy="102">гитара</a>
     <a class="chess item" cx="-362" cy="152">шахматы</a>
     <p class="coffee item" cx="80" cy="802">кофе</p>
