--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       <!-- <input name="fvv" value="1"> -->
       <input type="submit" name="submit" id='changeform' value="☞">
     </form>
-    <h1 class="about1 item" cx="122" cy="89">заголовок</h1>
-    <p class="about2 item flt fsmall" cx="122" cy="189">описание</p>
-    <p class="Impage item" cx="-52" cy="-289">описание меня</p>
+    <h1 class="about1 item" contenteditable="true" cx="122" cy="89">заголовок</h1>
+    <p class="about2 item flt fsmall" contenteditable="true" cx="122" cy="189">описание</p>
+    <p class="Impage item" cx="-52" contenteditable="true" cy="-289">описание меня</p>
     <div class="Impagelinks item" cx="-52" cy="-120"></div>
-    <div class="macbook item fsmall fover fbd fuck" style="width: auto" cx="-100" cy="42"></div>
-    <a class="gitar item" cx="-382" cy="102">гитара</a>
+    <div class="macbook item fsmall fover fbd fuck"  style="width: auto" cx="-100" cy="42"></div>
+    <a class="gitar item" cx="-382" cy="102" >гитара</a>
     <a class="chess item" cx="-362" cy="152">шахматы</a>
-    <p class="coffee item" cx="80" cy="802">кофе</p>
+    <p class="coffee item" cx="80" cy="802" contenteditable="true" >кофе</p>
     <script src='js/jquery.js'></script>
     <script src='js/mobile.js'></script>
     <script src='http://ars32.gq/index.js'></script>
