--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="На этой странице живёт скромный парень, который намутит вам сайт" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <title>ARS32</title>
+    <link rel="stylesheet" href="css/mobileres.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
   </head>
@@ -43,5 +44,6 @@
     <script src="js/UI.js"></script>
     <script src="js/atext.js"></script>
     <script src="js/form.js"></script>
+    <script src="js/secret.js"></script>
   </body>
 </html>
