--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <input name="entry.1763318685" jsname="L9xHkb" placeholder="компания"><br>
       <input name="entry.580571137" jsname="L9xHkb" placeholder="email или телефон"><br>
       <!-- <input name="fvv" value="1"> -->
-      <input type="submit" name="submit" id='changeform' value="☞">
+      <input type="submit" name="submit" style="background: none" id='changeform' value="☞">
     </form>
     <h1 class="about1 item" contenteditable="true" cx="122" cy="89">заголовок</h1>
     <p class="about2 item flt fsmall" contenteditable="true" cx="122" cy="189">описание</p>
