--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <!-- <input name="fvv" value="1"> -->
       <input type="submit" name="submit" style="background: none" id='changeform' value="☞">
     </form>
-    <h1 class="about1 item" contenteditable="true" cx="122" cy="89">заголовок</h1>
-    <p class="about2 item flt fsmall" contenteditable="true" cx="122" cy="189">описание</p>
-    <p class="Impage item" cx="-52" contenteditable="true" cy="-289">описание меня</p>
-    <div class="Impagelinks item" cx="-52" cy="-120"></div>
-    <div class="macbook item fsmall fover fbd fuck"  style="width: auto" cx="-100" cy="42"></div>
+    <h1 class="about1 item rtext" contenteditable="true" cx="122" cy="89">заголовок</h1>
+    <p class="about2 item flt fsmall rtext" contenteditable="true" cx="122" cy="189">описание</p>
+    <p class="Impage item rtext" cx="-52" contenteditable="true" cy="-289">описание меня</p>
+    <div class="Impagelinks item rtext" cx="-52" cy="-120"></div>
+    <div class="macbook item fsmall fover fbd fuck rtext"  style="width: auto" cx="-100" cy="42"></div>
     <a class="gitar item" cx="-382" cy="102" >гитара</a>
     <a class="chess item" cx="-362" cy="152">шахматы</a>
     <p class="coffee item" cx="80" cy="802" contenteditable="true" >кофе</p>
@@ -44,6 +44,7 @@
     <script src="js/UI.js"></script>
     <script src="js/atext.js"></script>
     <script src="js/form.js"></script>
+    <script src="js/textr.js"></script>
     <script src="js/secret.js"></script>
   </body>
 </html>
