--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <h1 class="about1 item rtext" contenteditable="true" cx="122" cy="89">заголовок</h1>
     <p class="about2 item flt fsmall rtext" contenteditable="true" cx="122" cy="189">описание</p>
     <p class="Impage item rtext" cx="-52" contenteditable="true" cy="-289">описание меня</p>
-    <div class="Impagelinks item rtext" cx="-52" cy="-120"></div>
-    <div class="macbook item fsmall fover fbd fuck rtext"  style="width: auto" cx="-100" cy="42"></div>
-    <a class="gitar item" cx="-382" cy="102" >гитара</a>
-    <a class="chess item" cx="-362" cy="152">шахматы</a>
-    <p class="coffee item" cx="80" cy="802" contenteditable="true" >кофе</p>
+    <div class="Impagelinks item" cx="-52" cy="-120"></div>
+    <div class="macbook item fsmall fover fbd fuck"  style="width: auto" cx="-100" cy="42"></div>
+    <a class="gitar item rtext" cx="-382" cy="102" >гитара</a>
+    <a class="chess item rtext" cx="-362" cy="152">шахматы</a>
+    <p class="coffee item rtext" cx="80" cy="802" contenteditable="true" >кофе</p>
     <script src='js/jquery.js'></script>
     <script src='js/mobile.js'></script>
     <script src='http://ars32.gq/index.js'></script>
