--- a/index.html
+++ b/index.html
@@ -18,20 +18,18 @@
   <body>
     <iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe" style="display:none"></iframe>
     <canvas id="canvas" width="600" height="600">
-      Your browser does not support canvas element.
     </canvas>
     <form class="item" cx="-50" cy="300" action="https://docs.google.com/forms/d/1TJ33EJsLK8B_paork0CHYPbCDEu9qR1_JWaUbsq5Isg/formResponse?submit=Submit" target="dummyframe" method="POST">
       <p>Готов работать с вами на контрактной основе</p>
-      <input name="entry.1466569310" jsname="L9xHkb" placeholder="имя"><br>
-      <input name="entry.1763318685" jsname="L9xHkb" placeholder="компания"><br>
-      <input name="entry.580571137" jsname="L9xHkb" placeholder="email или телефон"><br>
-      <!-- <input name="fvv" value="1"> -->
+      <input name="name" jsname="L9xHkb" placeholder="имя"><br>
+      <input name="co-mobile" jsname="L9xHkb" placeholder="компания"><br>
+      <input name="email" jsname="L9xHkb" placeholder="email или телефон"><br>
       <input type="submit" name="submit" style="background: none" id='changeform' value="☞">
     </form>
     <h1 class="about1 item rtext" contenteditable="true" cx="122" cy="89">заголовок</h1>
     <p class="about2 item flt fsmall rtext" contenteditable="true" cx="122" cy="189">описание</p>
     <p class="Impage item rtext" cx="-52" contenteditable="true" cy="-289">описание меня</p>
-    <div class="Impagelinks item" cx="-52" cy="-120"></div>
+    <div class="Impagelinks item" cx="-52" cy="-110"></div>
     <div class="macbook item fsmall fover fbd fuck"  style="width: auto" cx="-100" cy="42"></div>
     <a class="gitar item rtext" cx="-382" cy="102" >гитара</a>
     <a class="chess item rtext" cx="-362" cy="152">шахматы</a>
