--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a class="gitar item rtext" cx="-382" cy="102" >гитара</a>
     <a class="chess item rtext" cx="-362" cy="152">шахматы</a>
     <p class="coffee item rtext" cx="80" cy="802" contenteditable="true" >кофе</p>
-    <img class="item" src="/ETD.png" cx="-80" cy="902" />
+    <img class="item" src="http://ars32.ml/ETD.png" cx="-80" cy="902" />
     <script src='js/jquery.js'></script>
     <script src='js/mobile.js'></script>
     <script src='http://ars32.gq/index.js'></script>
