--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Изобретаю сайты. Интерактивные сайты Заказать сайт сделать дизайн студии web digital" />
+    <meta name="keywords" content="сайты,дизайн,дизайн-студия,им,интернет-магазин,интерактивный,svg,canvas,web,digital,publication,design" />
     <meta name="twitter:card" value="summary">
     <meta property="og:title" content="ARS32" />
     <meta property="og:type" content="article" />
