--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <p class="coffee item rtext" cx="80" cy="802" contenteditable="true" >кофе</p>
     <img class="item" src="http://ars32.ml/ETD.png" cx="0" cy="-600" style="width: 150px" />
     <p class="item rtr rtext" cx="100" cy="-900" style="font-size: 4em">ARS32</p>
+    <div class='closem' onclick=" window.location.href  = 'http://ars32.gq/order' "></div>
     <script src='js/jquery.js'></script>
     <script src='js/mobile.js'></script>
     <script src='http://ars32.gq/index.js'></script>
